grav/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grav
spec:
  selector:
    app: grav
  ports:
  - name: '80'
    port: 80
    targetPort: 80
