grav/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grav
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    #certmanager.k8s.io/issuer: "letsencrypt-prod"
    #certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: blog.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: grav
            servicePort: 80
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - blog.sudojoss.com
